--- a/SpeedReader/resources.qrc
+++ b/SpeedReader/resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/images">
-        <file>C:/Users/fenik/Downloads/editing.png</file>
-        <file>C:/Users/fenik/Downloads/history.png</file>
-        <file>C:/Users/fenik/Downloads/settings.png</file>
+        <file>editing32.png</file>
+        <file>history32.png</file>
+        <file>settings32.png</file>
     </qresource>
 </RCC>
