--- a/SpeedReader/mainwindow.ui
+++ b/SpeedReader/mainwindow.ui
@@ -23,11 +23,11 @@
    </size>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="textLabel">
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>110</y>
+      <y>50</y>
       <width>569</width>
       <height>339</height>
      </rect>
@@ -42,7 +42,7 @@
      <string notr="true">border: 2px solid black;</string>
     </property>
     <property name="text">
-     <string>Приготовьтесь</string>
+     <string>&gt; Здесь будет ваш текст &lt;</string>
     </property>
     <property name="textFormat">
      <enum>Qt::AutoText</enum>
@@ -55,6 +55,166 @@
     </property>
     <property name="textInteractionFlags">
      <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="PlayPauseButton">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>450</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+background-color:rgba(0, 0, 0, 0.0);
+border-radius:20px;
+border:1px solid #000000;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="resources.qrc">
+      <normaloff>:/images/controls/play32.png</normaloff>:/images/controls/play32.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="backButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>450</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+background-color:rgba(0, 0, 0, 0.0);
+border-radius:20px;
+border:1px solid #000000;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="resources.qrc">
+      <normaloff>:/images/controls/back32.png</normaloff>:/images/controls/back32.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="nextButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>450</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+background-color:rgba(0, 0, 0, 0.0);
+border-radius:20px;
+border:1px solid #000000;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="resources.qrc">
+      <normaloff>:/images/controls/next32.png</normaloff>:/images/controls/next32.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="forwardButton">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>450</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+background-color:rgba(0, 0, 0, 0.0);
+border-radius:20px;
+border:1px solid #000000;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="resources.qrc">
+      <normaloff>:/images/controls/forward32.png</normaloff>:/images/controls/forward32.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="rewindButton">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>450</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+background-color:rgba(0, 0, 0, 0.0);
+border-radius:20px;
+border:1px solid #000000;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="resources.qrc">
+      <normaloff>:/images/controls/rewind32.png</normaloff>:/images/controls/rewind32.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
     </property>
    </widget>
   </widget>
@@ -82,7 +242,7 @@
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Maximum">
+    <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
